<resources>
    <string name="app_name">Shell</string>
    <string name="hello_world">Hello World</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member">Already a member?</string>
    <string name="freeing_return">Freeing Return</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
</resources>
