<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:background="#FFFFFF">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="45dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:background="@drawable/gradient1">

            <ImageView android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo" />

            <!-- Email Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freeing_return"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="1dp">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>
            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="1dp">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="45dp"
                android:padding="12dp"
                android:text="@string/login"
                android:background="#ffffff"
                android:textColor="#0099ff"
                android:textSize="20dp" />

            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="1dp"
                android:text="@string/no_account_yet"
                android:gravity="center"
                android:textSize="16sp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="12dp"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:background="#ffffff"
                android:textColor="#0099ff"
                android:textSize="20dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>